(bsc#1009118) fixes overlapping text narrow window

--- a/branding/css/spacewalk-fixes.less
+++ b/branding/css/spacewalk-fixes.less
@@ -25,3 +25,9 @@ div.checkbox.icon-wrapper i.fa {
 div.form-control {
     &:extend(.form-control[readonly]);
 }
+
+
+/* bsc#1009118 overlapping text when resizing */
+.auto-width {
+    width: auto;
+}
